--- a/examples/protovis/index.html
+++ b/examples/protovis/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Indented Tree</title>
-    <script type="text/javascript" src="protovis-d3.2.js"></script>
+    <script type="text/javascript" src="protovis-r3.2.js"></script>
     <script type="text/javascript" src="treevisitor.js"></script>
 
   <style type="text/css">
