--- a/examples/d3_treemap/d3_treemap.html
+++ b/examples/d3_treemap/d3_treemap.html
@@ -41,6 +41,8 @@
 
 <script type="text/javascript">
 
+    console.log("ciao");
+
     var w = 1280 - 80,
             h = 800 - 180,
             x = d3.scale.linear().range([0, w]),
@@ -72,7 +74,7 @@
     d3.json("d3_tree_rb_output.json", function (data) {
         node = root = data;
 
-        var nodes = d3_treemap.nodes(root)
+        var nodes = treemap.nodes(root)
                 .filter(function (d) {
                     return !d.children;
                 });
