--- a/examples/d3js_layout_treemap/index.html
+++ b/examples/d3js_layout_treemap/index.html
@@ -5,8 +5,8 @@
 
         <link type="text/css" rel="stylesheet" href="style.css">
 
-        <script type="text/javascript" src="d3.js"></script>
-        <script type="text/javascript" src="d3.layout.js"></script>
+        <script src="http://d3js.org/d3.v2.js"></script>
+        <script src="data.js"></script>
 
         <style type="text/css">
 
@@ -42,8 +42,6 @@
 
 
         </div>
-
-        <script type="text/javascript" src="data.js"></script>
 
         <script type="text/javascript">
 
